# MLE-Project

./: .gitignore  LICENSE  README.md  best_model.pth  eval.py  pyproject.toml  utils.py
data/aggregated/clock_keychain/: img18.png:Zone.Identifier
experiments/: ExperimentMobileNet.ipynb  ExperimentTransferLearning.ipynb  ExperimentTransferLearningV2.ipynb  ExperimentTransferLearningV3.ipynb  ExperimentTransferLearningV4.ipynb  ExperimentVIT.ipynb  utils.py
experiments2/: 01_Baseline.ipynb  02_CustomCNN_FromScratch.ipynb  03_ClassicCNNs_ResNet_VGG.ipynb  04_LightweightTransferLearning.ipynb  05_ModernTransferLearning.ipynb  06_VisionTransformers.ipynb  07_BestModel_Improvements.ipynb  08_FinalAnalysis.ipynb  utils.py
final_experiments/: 01_data_and_baselines.ipynb  02_small_cnn.ipynb  03_vgg_scratch.ipynb  04_vgg_pretrained.ipynb  05_resnet50.ipynb  06_mobilenetv2.ipynb  07_efficientnet_b0.ipynb  08_vit.ipynb  09_finetuning.ipynb  finetuning_v2.ipynb  generate_figures.py  generate_notebooks.py
