[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "LicenseRef-UF-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.16.0",
    "imutils>=0.5.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
